<resources>
    <string name="app_name">UMS Mounter</string>
    <string name="action_revert">Set to mtp,adb</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="check_dependencies">Check dependencies...</string>
    <string name="title">UMS Mounter</string>
    <string name="create_image">Create Image</string>
    <string name="download_image">Download Image</string>
    <string name="credits">Credits</string>
    <string name="version">Version:</string>
    <string name="libraries_used">Libraries used:</string>
    <string name="acknowledgement">Acknowledgement:</string>
    <string name="source_code">Source code:</string>
    <string name="create">Create...</string>
    <string name="image_name">Image Name</string>
    <string name="img">.img</string>
    <string name="image_size">Image Size</string>
    <string name="mb">MB</string>
    <string name="free_space">Free Space:</string>
    <string name="available_images">Available Images:</string>
    <string name="mode">Mode</string>
    <string name="mode2">Mode:</string>
    <string name="status">Status:</string>
    <string name="refresh_list">Refresh List</string>
    <string name="download">Download</string>
    <string name="releases">Releases</string>
    <string name="mount_off">Mount</string>
    <string name="mount_on">Unmount</string>
    <string name="logo">logo</string>
    <string name="delete">Delete</string>
</resources>
